# galahad-encoder

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  OPERATOR.md  PLAYER.md
scripts/: fetch-ffmpeg.ps1
src/: App.tsx  PreviewWindow.tsx  api.ts  main.tsx  styles.css  types.ts  ui.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capability.rs  commands.rs  config.rs  control_channel.rs  control_runtime.rs  encoder.rs  error.rs  ffmpeg.rs  gst2110.rs  lib.rs  logger.rs  main.rs  net_info.rs  paths.rs  pipeline.rs  presets.rs  preview.rs  process_enum.rs  srt.rs  stream_state.rs  video_device.rs  window_enum.rs
src-tauri/src/audio/: mod.rs  wasapi.rs
src-tauri/src/capture/: mod.rs  wgc.rs
